Update file name, distribution files and version

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 
     <style>
-        #six-charts-section {
+        #six-items-section {
             margin-top: 1em;
             margin-bottom: 1em;
         }
 
-        #six-charts-section .segment {
+        #six-items-section .segment {
             height: 18em;
         }
 
@@ -92,7 +92,7 @@
 
         <h3 class="ui header">Multiple Items</h3>
 
-        <div id="six-charts-section" class="ui three column doubling stackable grid container">
+        <div id="six-items-section" class="ui three column doubling stackable grid container">
             <div class="column">
                 <div id="item-2" class="ui segment">
                     <div class="ui active loader"></div>
